fixed tagbar overflow

--- a/src/components/Search/FilterSideBar/filters.css
+++ b/src/components/Search/FilterSideBar/filters.css
@@ -14,6 +14,12 @@
 
 }
 
+.filters{
+  background-color: white;
+}
+#sidebarr{
+  background-color: white;
+}
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 3px rgb(255, 255, 255);
   border-radius: 2px;
@@ -50,9 +56,6 @@
   width: max-content;
   padding: 4px 5px;
 }
-.sidetag-selected {
-  background-color: black;
-}
 .sidebar {
   margin-left: 0.8%;
   height: 100%;
@@ -69,8 +72,10 @@
   font-weight: bold;
 }
 .mobile{
-  overflow-x:hidden;
-}
+    white-space: nowrap;
+    overflow-x: clip;
+    max-width: 100%;
+    }
 .sidetag {
   border-radius: 8px;
   padding: 10px;
